VR: Fix click during scrolling

Now we can click while scrolling. The scrolling stops and Tap is sent.

BUG=668518

Review-Url: https://codereview.chromium.org/2533493002
Cr-Commit-Position: refs/heads/master@{#435051}

Former-commit-id: 7f51e89599e3a75c42ad82d1d65b815fd6be3e96